kubernetes/apps/blue-bubbles/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blue-bubbles-ingest
  namespace: blue-bubbles
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "blue-bubbles.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: blue-bubbles-ingest
          port: 8080
